--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 header {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 50px;
     padding: 10px 30px;
 }
 
@@ -29,64 +29,75 @@ button {
     border: none;
     border-radius: 10px;
     cursor: pointer;
-    background-color: palegoldenrod;
+    background-color: #ffc93d;
 }
 
 button:hover {
     filter: brightness(0.95);
 }
 
-.container>p {
-    text-align: center;
-    font-size: 30px;
-    font-weight: bold;
-    margin: 0;
-    box-sizing: border-box;
-    height: 140px;
-    line-height: 140px;
-    min-width: 500px;
-}
 
 .validated {
-    color: green;
+    color: rgb(65, 161, 36);
 }
 
 p.invalidated {
-    color: red;
+    color: rgb(197, 69, 52);
+}
+
+.selected {
+    border: 1px solid palegoldenrod;
+}
+
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 70%;
+    height: 500px;
+    background: rgb(255,201,61);
+    background: linear-gradient(180deg, rgba(255,201,61,1) 0%, rgba(226,227,96,1) 100%);
+    border-radius: 10px;
+    gap: 20px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .window {
-    height: 180px;
     overflow: hidden;
-    border: 10px solid palegoldenrod;
-    border-radius: 10px 0 0 10px;
+    border-radius: 10px;
     padding: 20px;
     box-sizing: border-box;
-    min-width: 300px;
+    width: 100%;
+    background-color: white;
+    height: 100%;    
 }
 
 .container {
     position: relative;
     transition: top 200ms ease-in-out;
-    top: 180px;
+    top: 400px;
+    
 }
 
-main {
-    display: flex;
-    align-items: center;
-    padding: 30px;
+.container>p {
+    text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+    margin: 0;
+    box-sizing: border-box;    
+    padding: 5px;
+    line-height: 370px;
+
 }
 
 .stats {
-    background-color: palegoldenrod;
-    padding: 10px 20px;
-    min-width: 300px;
-    height: 180px;
-    box-sizing: border-box;
-    border-radius: 0 10px 10px 0;
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .stats>p {
